could not make forms required, board UI changed

--- a/index.html
+++ b/index.html
@@ -73,16 +73,28 @@
             <h1>Let's see who's playing!</h1>
             <h3>Enter Your Team Names</h3>
 
-            <!-- I'M HAVING TROUBLE MAKING ALL PARTS REQUIRED FOR THIS FORM -->
-            <section id="groupBtn">
-                <section><label>Team 1:</label> <input class="teamname" placeholder="   team 1" required><section class="color-square square-1"></section></section>
-                <section><label>Team 2:</label> <input class="teamname" placeholder="   team 2" required><section class="color-square square-2"></section></section>
-                <section><label>Team 3:</label> <input class="teamname" placeholder="   team 3" required><section class="color-square square-3"></section></section>
-                <section><label>Team 4:</label> <input class="teamname" placeholder="   team 4" required><section class="color-square square-4"></section></section>
-            </section>
-        </section>
-        <section id="startBtn">
-            <button type="submit" id="start-game">Start Game</button>
+            <form id="groupBtn">
+                <section>
+                    <label>Team 1:</label>
+                    <input type="text" class="teamname" placeholder="   team 1" required>
+                    <section class="color-square square-1"></section>
+                </section>
+                <section>
+                    <label>Team 2:</label>
+                    <input type="text" class="teamname" placeholder="   team 2" required>
+                    <section class="color-square square-2"></section>
+                </section>
+                <section>
+                    <label>Team 3:</label>
+                    <input type="text" class="teamname" placeholder="   team 3" required>
+                    <section class="color-square square-3"></section>
+                </section>
+                <section><label>Team 4:</label>
+                    <input type="text" class="teamname" placeholder="   team 4" required>
+                    <section class="color-square square-4"></section>
+                </section>
+                <input id="startBtn" type="submit" value="Start Game">
+            </form>
         </section>
 
     </section>
