--- a/board/board.html
+++ b/board/board.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@300;400;700&family=Mali:wght@300;500;700&display=swap" rel="stylesheet">
 
+
     <!-- icons from font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
    
@@ -44,7 +45,7 @@
 
                             <section class="dice-container">
                                 <section class="dice-img-container">
-                                    <img class="dice-img" src="../images/dice.png" alt="dice-img">
+                                    <img class="dice-img" src="../images/dice.png" alt="dice-img" width="200" height="200">
                                 </section>
                                 <section class="roll-container">
                                     <p class="turn-display"></p>
