--- a/index.html
+++ b/index.html
@@ -71,30 +71,31 @@
         <i id="backBegin" class="fa-solid fa-arrow-left"></i>
         <section id="fillNames">
             <h1>Let's see who's playing!</h1>
-            <h3>Enter Your Team Names</h3>
 
             <form id="groupBtn">
-                <section>
+                <h3>Enter Your Team Names</h3>
+                <section id="formOne">
                     <label>Team 1:</label>
                     <input type="text" class="teamname" placeholder="   team 1" required>
                     <section class="color-square square-1"></section>
                 </section>
-                <section>
+                <section id="formTwo">
                     <label>Team 2:</label>
                     <input type="text" class="teamname" placeholder="   team 2" required>
                     <section class="color-square square-2"></section>
                 </section>
-                <section>
+                <section id="formThree">
                     <label>Team 3:</label>
                     <input type="text" class="teamname" placeholder="   team 3" required>
                     <section class="color-square square-3"></section>
                 </section>
-                <section><label>Team 4:</label>
+                <section id="formFour">
+                    <label>Team 4:</label>
                     <input type="text" class="teamname" placeholder="   team 4" required>
                     <section class="color-square square-4"></section>
                 </section>
-                <input id="startBtn" type="submit" value="Start Game">
             </form>
+            <input type="submit" id="startBtn" value="Start Game">
         </section>
 
     </section>
