--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
             <input type="submit" id="startBtn" value="Start Game">
         </section>
 
+        <section id="teamname-warning-container">
+            <section id="teamname-warning">
+                Please enter the teamnames
+                <button id="closeWarning">Close</button>
+            </section>
+        </section>
+
     </section>
 
 <!-- — — — — — — — — — — — — — select team names END — — — — — — — — — — — — — — — — -->
