cells changed, movers changed, submit answer button changed

--- a/board/board.html
+++ b/board/board.html
@@ -26,10 +26,10 @@
         <section class="game-container">
             <h1>Seal Your Knowledge</h1>
             <section class="board-container ">
-                <img class="bike-img" src="../images/bike1.png" alt="bike-img">
-                <img class="bike-img" src="../images/bike2.png" alt="bike-img">
-                <img class="bike-img" src="../images/bike3.png" alt="bike-img">
-                <img class="bike-img" src="../images/bike4.png" alt="bike-img">
+                <img class="mover-img" src="../images/mover1.png" alt="mover-img">
+                <img class="mover-img" src="../images/mover2.png" alt="mover-img">
+                <img class="mover-img" src="../images/mover3.png" alt="mover-img">
+                <img class="mover-img" src="../images/mover4.png" alt="mover-img">
 
                 <!-- First Row -->
                 <section id="upper-row" class="row"></section>
