minor changes after full screening results page

--- a/board/result.html
+++ b/board/result.html
@@ -22,7 +22,7 @@
     </head>
 <body>
     <section class="final-result">
-        <h3>Congratulations! <br><br> Team <em><span class="team-winner"></span></em> won the game!</h3>
+        <h3>Congratulations! <br> Team <em><span class="team-winner"></span></em> won the game!</h3>
         <a id="returnHome" href="../index.html">Return Home</a>
     </section>
 </body>
