--- a/board/board.html
+++ b/board/board.html
@@ -80,7 +80,7 @@
 
             <!-- RESULTS PAGE -->
             <section class="final-result hidden">
-                <h3>Congratulations! <span class="team-winner"></span> has won the game!</h3>
+                <h3>Congratulations! <br> Team <em><span class="team-winner"></span></em> won the game!</h3>
                 <a id="returnHome" href="../index.html">Return Home</a>
             </section>
         </section>
