more questions added, as well as slight UI change

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
         <section id="teamname-warning-container">
             <section id="teamname-warning">
-                Please enter the teamnames
-                <button id="closeWarning">Close</button>
+                Please enter all 4 teamnames to begin
+                <button id="closeWarning">Got It</button>
             </section>
         </section>
 
